--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,3 +21,17 @@ img {
 img:hover {
   scale: 102%;
 }
+
+.loading {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: conic-gradient(#0000 10%, #ffc639);
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: s3 1s infinite linear;
+}
+@keyframes s3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
